exports[`test renders with props 1`] = `
<div className="background--light-primary one-whole text-center push-top push-double-top@lap-and-up soft-double-bottom push-double-bottom">
<Meta title="Update your details" />
<Back />
<Form id="reset-password" classes={{...}} submit={[Function]}>
<div className="push-double">
<h4 className="text-center">
My Personal Details
</h4>
</div>
<h6 className="soft-bottom">
Name
</h6>
<Input name="NickName" label="Nickname" type="text" defaultValue="jimothy" />
<div className="grid">
<div className="grid__item one-half">
<Input name="FirstName" label="First Name" type="text" defaultValue="jim" />
</div>
<div className="grid__item one-half">
<Input name="LastName" label="Last Name" type="text" defaultValue="bob" />
</div>
</div>
<h6 className="soft-bottom">
Contact
</h6>
<Input name="Email" placeholder="user@email.com" label="Email" type="email" errorText="Please enter a valid email" validation={[undefined]} defaultValue="test@test.com" />
<h6 className="soft-bottom">
Birthday
</h6>
<div className="grid">
<div className="grid__item three-fifths">
<div className="grid">
<div className="grid__item one-half">
<Select name="BirthMonth" label="Month" type="text" defaultValue={1} includeBlank={true} items={{...}} validation={[Function]} />
</div>
<div className="grid__item one-half">
<Select name="BirthDay" label="Day" type="text" defaultValue={1} includeBlank={true} items={{...}} />
</div>
</div>
</div>
<div className="grid__item two-fifths">
<Select name="BirthYear" label="Year" type="text" defaultValue="2000" includeBlank={true} items={{...}} />
</div>
</div>
<h6 className="soft-bottom">
Campus
</h6>
<Select name="Campus" label="Campus" type="Campus" defaultValue="1" includeBlank={true} items={{...}} />
<button className="btn">
Update
</button>
</Form>
</div>
`;

exports[`test renders without campuses 1`] = `
<div className="background--light-primary one-whole text-center push-top push-double-top@lap-and-up soft-double-bottom push-double-bottom">
<Meta title="Update your details" />
<Back />
<Form id="reset-password" classes={{...}} submit={[Function]}>
<div className="push-double">
<h4 className="text-center">
My Personal Details
</h4>
</div>
<h6 className="soft-bottom">
Name
</h6>
<Input name="NickName" label="Nickname" type="text" defaultValue="jimothy" />
<div className="grid">
<div className="grid__item one-half">
<Input name="FirstName" label="First Name" type="text" defaultValue="jim" />
</div>
<div className="grid__item one-half">
<Input name="LastName" label="Last Name" type="text" defaultValue="bob" />
</div>
</div>
<h6 className="soft-bottom">
Contact
</h6>
<Input name="Email" placeholder="user@email.com" label="Email" type="email" errorText="Please enter a valid email" validation={[undefined]} defaultValue="test@test.com" />
<h6 className="soft-bottom">
Birthday
</h6>
<div className="grid">
<div className="grid__item three-fifths">
<div className="grid">
<div className="grid__item one-half">
<Select name="BirthMonth" label="Month" type="text" defaultValue={1} includeBlank={true} items={{...}} validation={[Function]} />
</div>
<div className="grid__item one-half">
<Select name="BirthDay" label="Day" type="text" defaultValue={1} includeBlank={true} items={{...}} />
</div>
</div>
</div>
<div className="grid__item two-fifths">
<Select name="BirthYear" label="Year" type="text" defaultValue="2000" includeBlank={true} items={{...}} />
</div>
</div>
<h6 className="soft-bottom">
Campus
</h6>
<Select name="Campus" label="Campus" type="Campus" defaultValue="1" includeBlank={true} items={{...}} />
<button className="btn">
Update
</button>
</Form>
</div>
`;

exports[`test renders without person campus 1`] = `
<div className="background--light-primary one-whole text-center push-top push-double-top@lap-and-up soft-double-bottom push-double-bottom">
<Meta title="Update your details" />
<Back />
<Form id="reset-password" classes={{...}} submit={[Function]}>
<div className="push-double">
<h4 className="text-center">
My Personal Details
</h4>
</div>
<h6 className="soft-bottom">
Name
</h6>
<Input name="NickName" label="Nickname" type="text" defaultValue="jimothy" />
<div className="grid">
<div className="grid__item one-half">
<Input name="FirstName" label="First Name" type="text" defaultValue="jim" />
</div>
<div className="grid__item one-half">
<Input name="LastName" label="Last Name" type="text" defaultValue="bob" />
</div>
</div>
<h6 className="soft-bottom">
Contact
</h6>
<Input name="Email" placeholder="user@email.com" label="Email" type="email" errorText="Please enter a valid email" validation={[undefined]} defaultValue="test@test.com" />
<h6 className="soft-bottom">
Birthday
</h6>
<div className="grid">
<div className="grid__item three-fifths">
<div className="grid">
<div className="grid__item one-half">
<Select name="BirthMonth" label="Month" type="text" defaultValue={1} includeBlank={true} items={{...}} validation={[Function]} />
</div>
<div className="grid__item one-half">
<Select name="BirthDay" label="Day" type="text" defaultValue={1} includeBlank={true} items={{...}} />
</div>
</div>
</div>
<div className="grid__item two-fifths">
<Select name="BirthYear" label="Year" type="text" defaultValue="2000" includeBlank={true} items={{...}} />
</div>
</div>
<h6 className="soft-bottom">
Campus
</h6>
<Select name="Campus" label="Campus" type="Campus" defaultValue={false} includeBlank={true} items={{...}} />
<button className="btn">
Update
</button>
</Form>
</div>
`;
